fix: Improved AI provider robustness and cleaned up backend warnings